# fastflow_taichi

./: LICENSE  LOG  README.md  debug_1.py  my_little_lakeflow.py  pyproject.toml  run.py  setup.py  test_pack_unpack.py
_save_fasftflow/fastflow/: lakeflow.py  lakeflow_kernels.py  scatter_min_kernels.py  tree_max_down.py
archive/: debug_1.py  my_little_lakeflow.py  run.py  tests.py
archive/expe/: ff_1.py  ff_2.py
archive/fastflow/: flow_accumulation.py  flow_fields.py  lakeflow.py  unified_fields.py
examples/: dev_graphflood.py  example_fill_topo.py  exemple_raw_1.py  graphflood_exemple.py  new_dev.py  run_dem_DA.py
expe/: _arch_ff12.py
expe_lexicographic_argmin/: t1.py
fastflow/: compute_receivers.py  depression_fields.py  fillinig_topo.py  flow_api.py  lakeflow.py  lakeflow_kernels.py  order_kernels.py  scatter_min_interface.py  tree_accum_up.py  unified_fields.py
fastflow/kernels/: common_utils.py  lakeflow.py  lakeflow_bg.py  tree_accum_down.py  tree_accum_up.py  tree_max_down.py
fastflow_taichi/: __init__.py  constants.py  f32_i32_struct.py  receivers.py
fastflow_taichi/flow/: __init__.py  downstream_propag.py  fill_topo.py  flowfields.py  lakeflow.py  neighbourer_flat.py  receivers.py  util_taichi.py
pyfastflow/: __init__.py  constants.py
pyfastflow/erodep/: SPL.py  __init__.py  deposition.py
pyfastflow/flood/: __init__.py  gf_fields.py  gf_hydrodynamics.py  gf_ls.py
pyfastflow/flow/: __init__.py  downstream_propag.py  environment.py  fill_topo.py  flowfields.py  lakeflow.py  level_acc.py  neighbourer_flat.py  receivers.py  util_taichi.py
(+48 files in other folders)
