[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastflow"
version = "0.0.1"
description = "GPU geomorphological and hydraulic flow routines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Boris Gailleton", email = "boris.gailleton@univ-rennes.fr"},
]
keywords = ["geomorphology", "hydraulics", "flow", "routing", "GPU", "taichi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "taichi>=1.4.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/bgailleton/fastflow_taichi"
Repository = "https://github.com/bgailleton/fastflow_taichi"
Issues = "https://github.com/bgailleton/fastflow_taichi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfastflow*"]